# wallpaper-downloader

./: .gitignore  LICENSE  README.md  pyproject.toml
smashingmagazine_wallpaper_downloader/: downloader.py
tests/: conftest.py  test_smashingmagazine_wallpaper_downloader.py
tests/files_for_tests/: first_main_page.html  last_main_page.html  page_with_wallpapers.html  second_main_page.html  wallpapers_names.json  wallpapers_urls.json
tests/test_downloader/: test_create_directory.py  test_download_wallpaper.py  test_download_wallpapers.py  test_get_directory_path.py  test_get_wallpaper_path.py  test_is_good_response_image.py
tests/test_site_parser/: test_find_next_page_url.py  test_find_wallpapers_names.py  test_find_wallpapers_page_url.py  test_find_wallpapers_urls.py  test_format_month_year.py  test_get_newest_wallpapers_month_year.py  test_get_page_html.py  test_get_wallpapers_urls.py  test_is_good_response_html.py  test_is_month_year_in_future.py
wallpaper_downloader/: __init__.py  app_logger.py  downloader.py  site_parser.py
