[tool.poetry]
name = "wallpaper-downloader"
version = "0.1.0"
description = ""
authors = ["PavliukKonstantin <Pavliuk.Konstantin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.6.2"
beautifulsoup4 = "^4.9.1"
requests = "^2.24.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
autopep8 = "^1.5.3"
flake8-docstrings = "^1.5.0"
pytest-asyncio = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
